...
                android:id="@+id/dashboard_hi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_hello"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/dashboard_user_id"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dashboard_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
